--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <title>Git Workshop</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <script src="js/app.js"></script>
     <header>
         <h1>Git Workshop</h1>
     </header>
-    <script src="js/app.js"></script>
+    <h4>Please enter your name:</h4>
+    <input type="text" id="Name"/>
+    <input type="submit" id="NameSubmit" onClick="nameCheck()"/>
+
 </body>
 </html>
