--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
         <br>
         <p id="welcome_msg"></p>
     </section>
+    <br>
+    <section>
+        <label for="year"><h4>2. Please enter a Year: </h4></label>
+        <input type="text" id="year"><br>
+        <button onclick="checkLeapYear()">Check Leap Year</button>
+        <br>
+        <p id="result"></p>
+    </section>   
 </body>
 </html>
