--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Git Workshop</h1>
+        <h1 class="rainbow-text">Git Workshop</h1>
     </header>
     <section>
         <label for="year"><h4>1. Please enter your name: </h4></label>
