--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/sidebar_style.css">
 </head>
 <body>
     <!-- Side navigation -->
