--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <input type="text" id="Name"><br>
             <button onclick="nameCheck()">Submit</button>
             <br>
-            <p id="welcome_msg"></p>
+            <p id="welcome_msg" class="rainbow-text"></p>
         </section>
         <br>
         <section>
@@ -36,7 +36,7 @@
             <input type="text" id="year"><br>
             <button onclick="checkLeapYear()">Check Leap Year</button>
             <br>
-            <p id="result"></p>
+            <p id="result" class="rainbow-text"></p>
         </section>   
     </div>
 </body>
