--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Page content -->
     <div class="main">
         <header>
-                <h1 class="rainbow-text">* Git Workshop *</h1>
+                <h1 class="rainbow-text">** Git Workshop **</h1>
         </header>
     
         <section>
